# npm

./: .gitignore  .mdcheck.js  .mise.toml  .oxfmtrc.json  AGENTS.md  Cargo.toml  dist.js  dist.sh  init.sh  knip.config.js  knip.js  new.js  new.sh  package.json  sh  test.sh  todo.md
.agents/: skills
.husky/: post-merge  pre-commit
_/: upgrade.sh
_tmpl/: README.md  package.json  test.sh
auth_env/: Cargo.toml
auth_env/src/: lib.rs
auth_trait/: Cargo.toml
auth_trait/src/: lib.rs
autozstd/: Cargo.toml  README.md  test.sh
autozstd/readme/: en.md  zh.md
autozstd/src/: decode.rs  encode.rs  error.rs  lib.rs
autozstd/tests/: main.rs
axum_cors/: AGENTS.md  Cargo.toml  README.md
axum_cors/examples/: demo.rs
axum_cors/readme/: en.md  zh.md
axum_cors/src/: lib.rs
axum_cors/tests/: main.rs
axum_graceful_restart/: AGENTS.md  Cargo.toml  README.md  test.sh
axum_graceful_restart/examples/: demo.rs
axum_graceful_restart/readme/: en.md  zh.md
axum_graceful_restart/src/: error.rs  lib.rs
axum_graceful_restart/src/os/: consts.rs  mod.rs  win.rs
axum_graceful_restart/src/os/unix/: helper.rs  mod.rs  restart.rs  signal.rs
axum_graceful_restart/tests/: Cargo.toml
axum_graceful_restart/tests/src/: main.rs
b255/: Cargo.toml  README.md  demo.sh
b255/examples/: demo.rs
b255/readme/: en.md  zh.md
b255/src/: decode.rs  encode.rs  lib.rs  util.rs
b255/tests/: main.rs
bar/: README.md  package.json
batch1.db_dir/: t1.csv  t1.sql
batch2.db_dir/: t2.csv  t2.sql
bench/: package.json
blake3_cipher/: Cargo.toml  README.md  gen_password.sh
blake3_cipher/examples/: gen_pwd.rs
blake3_cipher/readme/: en.md  zh.md
blake3_cipher/src/: dec.rs  enc.rs  key.rs  lib.rs
blake3_cipher/tests/: main.rs
cersei_rs/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.js  dist.js  knip.js  npmInit.js  package.json  prepublish.js  test.sh
cersei_rs/ops/: npmInit.js  prepublish.js  test.js
cersei_rs/readme/en/: README.md
cersei_rs/readme/zh/: README.md
cersei_rs/src/: .gitignore  MSG.d.ts  MSG.js  PLATFORM.js  _.d.ts  _.js  agent.rs  chat.d.ts  chat.js  chat.rs  error.rs  lib.rs  log.d.ts  log.js  logChat.d.ts  logChat.js  logSession.d.ts  logSession.js  msg.rs  native.js  npmOrg.js  rt.rs  session.d.ts  session.js  session.rs  stream.rs  wrapStream.js
cersei_rs/test/: MSG.js  history.test.js  stream.test.js
cersei_rs/tests/: MSG.js  history.test.js  multi_turn.test.js  setup.js  stream.test.js
cert_by_host/: Cargo.toml  README.md  check_trait.rs  test.sh
cert_by_host/readme/: en.md  zh.md
cert_by_host/src/: error.rs  get_by_kvrocks.rs  lib.rs
cert_by_host/tests/: main.rs
citer/: Cargo.toml  README.md
citer/readme/: en.md  zh.md
citer/src/: lib.rs
citer/tests/: main.rs
csv/: README.md  knip.js  package.json
dns_parse/: AGENTS.md  Cargo.toml  README.md
dns_parse/readme/: en.md  zh.md
dns_parse/src/: error.rs  lib.rs  parse.rs
expire_cache/: Cargo.toml  README.md
expire_cache/readme/: en.md  zh.md
expire_cache/src/: get_or_init.rs  get_or_init_async.rs  lib.rs  map.rs  set.rs
expire_cache/tests/: main.rs
expire_set/: Cargo.toml  README.md
expire_set/readme/: en.md  zh.md
expire_set/src/: lib.rs
expire_set/tests/: main.rs
ext_mime/: Cargo.toml  README.md  knip.js  package.json
ext_mime/js/: ROOT.js  gen.js  versionBump.js
ext_mime/readme/: en.md  zh.md
ext_mime/sh/: dist.sh
ext_mime/src/: ext_mime.rs  lib.rs  mime.rs
find/: README.md  README.mdt  package.json
findgit/: README.md  README.mdt  package.json
fix/: README.md  package.json
fmt/: package.json
format/: README.md  package.json
github_cdn/: README.md  package.json
gitsql/: README.md  README.mdt  package.json  test.sh
graceful_restart/: Cargo.toml  README.md
graceful_restart/readme/: en.md  zh.md
graceful_restart/src/: error.rs  lib.rs
graceful_restart/src/os/: mod.rs  other.rs  unix.rs
graceful_restart/tests/: main.rs
hash/: README.md  package.json
hash_tag_id/: AGENTS.md  Cargo.toml  README.md
hash_tag_id/readme/: en.md  zh.md
hash_tag_id/scratch/: test_mermaid.md
hash_tag_id/src/: lib.rs
hash_tag_id/tests/: main.rs
i18n_scan/: README.md  knip.js  package.json  run.sh
i18nyml/: README.md  package.json
idns/: Cargo.toml  README.md
idns/readme/: en.md  zh.md
idns/src/: cache.rs  dns_race.rs  lib.rs  qtype.rs
idns/src/parse/: a.rs  aaaa.rs  mod.rs  mx.rs  spf.rs
idns/tests/: main.rs
idot/: AGENTS.md  Cargo.toml  README.md  README.mdt
idot/readme/: en.md  zh.md
idot/src/: dot.rs  error.rs  lib.rs
idot/tests/: main.rs
ip_set/: Cargo.toml  README.md
ip_set/readme/: en.md  zh.md
ip_set/src/: lib.rs
ip_set/tests/: main.rs
ireq/: Cargo.toml  README.md
ireq/readme/: en.md  zh.md
ireq/src/: error.rs  lib.rs  proxy.rs  retry.rs
ireq/tests/: main.rs
kill_port/: Cargo.toml  README.md
kill_port/readme/: en.md  zh.md
kill_port/src/: lib.rs
kill_port/src/os/: mod.rs  unix.rs  win.rs
kill_port/tests/: main.rs
kvid/: Cargo.toml  README.md  design.md  test.sh
kvid/readme/: en.md  zh.md
kvid/src/: error.rs  impl.rs  lib.rs
kvid/tests/: main.rs
listen_signal/: Cargo.toml  README.md
listen_signal/readme/: en.md  zh.md
listen_signal/src/: lib.rs
listen_signal/tests/: main.rs
log_init/: Cargo.toml  README.md
log_init/readme/: en.md  zh.md
log_init/src/: kv.rs  lib.rs
log_init/src/layout/: mod.rs  text.rs
log_init/tests/: main.rs
mail_forward/: Cargo.toml  README.md
mail_forward/readme/: en.md  zh.md
mail_forward/src/: lib.rs
mail_struct/: Cargo.toml  README.md
mail_struct/readme/: en.md  zh.md
mail_struct/src/: host_user_li.rs  lib.rs  send.rs
mail_struct/tests/: main.rs
password_/: Cargo.toml  README.md
password_/readme/: en.md  zh.md
password_/src/: lib.rs
password_/tests/: main.rs
pick_fast/: Cargo.toml  README.md
pick_fast/readme/: en.md  zh.md
pick_fast/src/: lib.rs
pick_fast/tests/: dns.rs  dns_server.rs  main.rs
race/: Cargo.toml  README.md
race/readme/: en.md  zh.md
race/src/: lib.rs
race/tests/: main.rs
(+798 files in other folders)
