[package]
name = "auth_env"
version = "0.1.5"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/auth_env"
description = "auth_env"
keywords = []
categories = ["authentication", "config", "development-tools", "api-bindings", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
anyhow = "1.0.103"

[dependencies.auth_trait]
version = "0.1.8"
path = "../auth_trait"
