[package]
name = "auth_trait"
version = "0.1.8"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/auth_trait"
description = "auth_trait"
keywords = []
categories = [
  "authentication",
  "web-programming",
  "api-bindings",
  "development-tools",
  "network-programming",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dev-dependencies]
aok = "0.1.18"
log = "0.4.32"
log_init = "0.1.38"
static_init = { version = "1.0.4", features = ["parking_lot"] }

[dev-dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[dependencies]
anyhow = "1.0.102"
