[dependencies]
aok = "0.1.18"
axum = "0.8.9"

[package]
name = "axum_cors"
version = "0.1.8"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/axum_cors"
description = "Zero-copy CORS middleware for Axum / 基于 Axum 的零拷贝跨域资源共享中间件"
keywords = ["axum", "cors", "middleware", "zero-copy", "http"]
categories = [
  "web-programming",
  "network-programming",
  "asynchronous",
  "api-bindings",
  "development-tools"
]

[dev-dependencies]
aok = "0.1.18"
loginit = "0.1.18"
static_init = "1.0.4"
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"

[dev-dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt", "rt-multi-thread", "time", "sync", "net"]

[package.metadata.docs.rs]
all-features = true
