[package]
name = "axum_graceful_restart"
version = "0.1.9"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/dev/axum_graceful_restart"
description = "Enables graceful shutdown and zero-downtime restarts for Axum applications. 为 Axum 应用提供优雅停机与零停机重启功能。"
keywords = ["axum", "graceful-shutdown", "zero-downtime", "restart", "http"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
axum = "0.8.9"
libc = "0.2.186"
thiserror = "2.0.18"
tracing = "0.1.44"

[dependencies.tokio]
version = "1.52.3"
features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "signal", "time"]

[target."cfg(windows)".dependencies]
kill_tree = "0.2.4"
listeners = "0.6.0"

[dev-dependencies]
aok = "0.1.18"
libc = "0.2.186"
loginit = "0.1.18"
reqwest = "0.13.4"
static_init = "1.0.4"
tracing = "0.1.44"


[dev-dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt", "rt-multi-thread", "sync"]
