[package]
name = "blake3_cipher"
version = "0.1.3"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/blake3_cipher"
description = "Fast and secure symmetric encryption using BLAKE3 XOF stream / 基于 BLAKE3 XOF 流的高速安全对称加密"
keywords = ["blake3", "encryption", "symmetric", "cipher", "xof"]
categories = ["algorithms", "cryptography", "data-structures", "encoding", "no-std"]
readme = "README.md"

[features]
default = ["dec", "enc"]
dec = []
enc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
blake3 = "1.8.5"

[dev-dependencies]
aok = "0.1.18"
base64 = "0.22.1"
fastrand = "2.4.1"
log = "0.4.32"
log_init = "0.1.38"
static_init = "1.0.4"
