[package]
name = "cert_by_host"
version = "0.1.9"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/cert_by_host"
description = "Dynamic SSL certificate loading from Kvrocks with auto-expiration / 基于 Kvrocks 的动态 SSL 证书加载与自动过期管理"
keywords = ["ssl", "certificate", "kvrocks", "cache", "rustls"]
categories = ["cryptography", "network-programming", "web-programming", "asynchronous", "caching"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["linkme"]

[features]
default = []

[dependencies]
anyhow = "1.0.103"
coarsetime = "0.1.37"
fred = "10.1.0"
linkme = "0.3.36"
papaya = "0.2.4"
parking_lot = "0.12.5"
rustls-pemfile = "2.2.0"
sonic-rs = "0.5.8"
thiserror = "2.0.18"
x509-parser = "0.18.1"
xboot = "0.1.39"

[dependencies.static_init]
version = "1.0.4"
features = ["parking_lot"]

[dependencies.ssl_trait]
version = "0.1.4"
path = "../ssl_trait"

[dependencies.tokio]
version = "1.52.3"
features = ["time"]

[dependencies.expire_set]
version = "0.1.10"
path = "../expire_set"

[dependencies.xkv]
version = "0.1.59"
features = ["r"]

[dev-dependencies]
aok = "0.1.18"
log = "0.4.33"
log_init = "0.1.38"
xboot = "0.1.39"

[dev-dependencies.static_init]
version = "1.0.4"
features = ["parking_lot"]

[dev-dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
