[package]
name = "dns_parse"
version = "0.1.5"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/dns_parse"
description = "DNS message build and parse / DNS 消息构建与解析"
keywords = [ "dns", "parser" ]
categories = [
"network-programming",
"parsing",
"data-structures",
"development-tools",
"no-std"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]

[dependencies]
bytes = "1.12.0"
hex = "0.4.3"
thiserror = "2.0.18"

[dependencies.idns]
version = "0.2.16"
path = "../idns"

[dev-dependencies]
aok = "0.1.18"
log = "0.4.32"
log_init = "0.1.38"
static_init = "1.0.4"

[dev-dependencies.tokio]
version = "1.52.3"
features = [ "macros", "rt", "rt-multi-thread", "time", "sync" ]
