[package]
name = "ext_mime"
version = "0.1.3"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/ext_mime"
description = "Fast and efficient file extension to MIME-Type mapping. 高效的文件后缀到 MIME 类型映射工具"
keywords = ["mime", "extension", "phf", "static", "mapping"]
categories = [
  "web-programming",
  "network-programming",
  "no-std",
  "data-structures",
  "development-tools"
]
readme = "README.md"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
phf = { version = "0.14.0", features = ["macros"] }

[dev-dependencies]
aok = "0.1.18"
log = "0.4.33"
log_init = "0.1.38"
static_init = "1.0.4"
