[package]
name = "idns"
version = "0.2.16"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/idns"
description = "DNS record parsing with racing query / 竞速查询的 DNS 记录解析库"
keywords = [ "dns", "spf", "async", "cache" ]
categories = [
"network-programming",
"asynchronous",
"caching",
"parsing",
"development-tools"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ "cache" ]
a = [ "cache" ]
aaaa = [ "cache" ]
mx = [ "cache" ]
spf = [ "a", "aaaa", "mx" ]
cache = [ "dep:expire_cache", "dep:static_init" ]

[dev-dependencies]
aok = "0.1.18"
log = "0.4.32"
log_init = "0.1.38"

[dev-dependencies.idot]
path = "../idot"
version = "0.1.3"

[dev-dependencies.static_init]
version = "1.0.4"
features = [ "parking_lot" ]

[dev-dependencies.tokio]
version = "1.52.3"
features = [ "macros", "rt", "rt-multi-thread", "time", "sync" ]

[dependencies]
log = "0.4.32"
papaya = "0.2.4"

[dependencies.expire_cache]
version = "0.1.26"
path = "../expire_cache"
optional = true
features = [ "hashmap", "get_or_init_async" ]

[dependencies.ts_]
version = "0.1.4"
path = "../ts_"
features = [ "milli" ]

[dependencies.ip_set]
version = "0.1.8"
path = "../ip_set"

[dependencies.pick_fast]
version = "0.1.25"
path = "../pick_fast"
features = [ "iter" ]

[dependencies.race]
version = "0.1.15"
path = "../race"

[dependencies.static_init]
version = "1.0.4"
optional = true
features = [ "parking_lot" ]
