[package]
name = "idot"
version = "0.1.3"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/idot"
description = "DNS over TLS (DoT) client / DNS over TLS (DoT) 客户端"
keywords = ["dns", "tls", "dot", "resolver"]
categories = [
  "network-programming",
  "asynchronous",
  "cryptography",
  "api-bindings",
  "development-tools",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["static"]
static = ["dep:static_init"]

[dependencies]
bytes = "1.12.0"
hipstr = "0.8"
thiserror = "2.0.18"
webpki-roots = "1.0.8"
tokio-rustls = "0.26"

[dependencies.static_init]
version = "1.0.4"
optional = true
features = ["parking_lot"]

[dependencies.dns_parse]
version = "0.1.2"
path = "../dns_parse"

[dependencies.idns]
version = "0.2.13"
path = "../idns"

[dependencies.rustls]
version = "0.23.40"
features = ["ring"]

[dependencies.tokio]
version = "1.52.3"
features = ["io-util", "net", "sync", "time"]

[dev-dependencies]
aok = "0.1.18"
log = "0.4.32"
log_init = "0.1.38"

[dev-dependencies.static_init]
version = "1.0.4"
features = ["parking_lot"]

[dev-dependencies.idns]
version = "0.2.13"
path = "../idns"
features = ["mx", "cache"]

[dev-dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
