[package]
name = "ip_set"
version = "0.1.8"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/ip_set"
description = "Fast IP range matching with binary search / 基于二分查找的高效IP范围匹配"
keywords = ["ip", "cidr", "ipv4", "ipv6", "spf"]
categories = ["network-programming", "data-structures", "algorithms", "development-tools", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dev-dependencies]
aok = "0.1.18"
log = "0.4.33"
log_init = "0.1.38"
static_init = "1.0.4"

[dev-dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
