[package]
name = "log_init"
version = "0.1.38"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/log_init"
description = "Smart logging initialization with automatic backend detection / 智能日志初始化与自动后端检测"
keywords = [
  "logging",
  "systemd",
  "journald",
  "initialization",
  "cross-platform",
]
categories = [
  "development-tools::debugging",
  "os",
  "asynchronous",
  "config",
  "development-tools",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["stdout"]
stdout = []
systemd = ["dep:logforth-append-journald"]

[dependencies]
coarsetime = "0.1.37"
colored = "3.1.1"
jiff = "0.2.28"
static_init = { version = "1.0.4", features = ["parking_lot"] }

[dependencies.log]
version = "0.4.32"
features = ["kv"]

[dependencies.logforth]
version = "0.30.1"
features = ["starter-log"]

[dev-dependencies]
aok = "0.1.18"

[target.'cfg(target_os = "linux")'.dependencies]
logforth-append-journald = { version = "0.4.0", optional = true }