[package]
name = "mail_forward"
version = "0.1.10"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/mail_forward"
description = "A trait to retrieve email forwarding addresses / 获取邮件转发地址的 trait"
keywords = ["email", "forward", "trait", "address", "mail"]
categories = [
  "email",
  "development-tools",
  "api-bindings",
  "web-programming",
  "network-programming"
]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.103"

[dev-dependencies]
aok = "0.1.18"
log = "0.4.33"
log_init = "0.1.38"
static_init = { version = "1.0.4", features = ["parking_lot"] }

[dev-dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
