[package]
name = "mail_struct"
version = "0.1.23"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/mail_struct"
description = "A minimalist Rust email structure library with optional support for encoding, decoding, and sending via SMTP. / 一个极简的 Rust 邮件结构库，支持可选的编码、解码及 SMTP 发送功能。"
keywords = ["email", "smtp", "struct", "mail", "bitcode"]
categories = ["email", "encoding", "development-tools", "data-structures", "parsing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
encode = []
decode = []
send = ["dep:mail-send"]

[dependencies]
bitcode = "0.6.9"
log = "0.4.33"
rapidhash = "4"

[dependencies.mail-send]
version = "0.6.0"
optional = true

[dependencies.xmail]
version = "0.1.17"
path = "../xmail"

[dev-dependencies]
aok = "0.1.18"
log = "0.4.33"
log_init = "0.1.38"

[dev-dependencies.static_init]
version = "1.0.4"
features = ["parking_lot"]

[dev-dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
