[package]
name = "password_"
version = "0.1.2"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/password_"
description = "Simple and secure password hashing library based on Argon2 / 基于 Argon2 的简单安全密码哈希库"
keywords = ["password", "hashing", "argon2", "security", "crypto"]
categories = ["cryptography", "authentication", "development-tools", "security", "database"]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
argon2 = "0.5.3"
rand = "0.10.1"
static_init = { version = "1.0.4", features = ["parking_lot"] }

[dev-dependencies]
aok = "0.1.18"
log = "0.4.32"
log_init = "0.1.38"
static_init = { version = "1.0.4", features = ["parking_lot"] }
