[package]
name = "race"
version = "0.1.15"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/webc-site/npm.git"
homepage = "https://github.com/webc-site/npm/tree/main/race"
description = "Staggered async task executor with race semantics / 阶梯式异步任务执行器，具备竞赛语义"
keywords = ["async", "race", "staggered", "executor", "stream"]
categories = ["asynchronous", "concurrency", "algorithms", "development-tools", "data-structures"]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
coarsetime = "0.1.37"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["time", "rt"] }

[dev-dependencies]
aok = "0.1.18"
env_logger = "0.11.11"
log = "0.4.33"
log_init = "0.1.38"
static_init = { version = "1.0.4", features = ["parking_lot"] }

[dev-dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt", "rt-multi-thread", "time", "sync", "net"]
